--- a/yolov8_model/config.yaml
+++ b/yolov8_model/config.yaml
@@ -1,24 +1,7 @@
-# YOLOv8 Classification Dataset Configuration
-# Este arquivo será gerado automaticamente pelo train.py
-# Você pode editá-lo manualmente se necessário
-
-# Caminho raiz do dataset
-path: data
-
-# Caminho para treino (relativo ao path ou absoluto)
-train: data
-
-# Caminho para validação (YOLOv8 faz split automático se for o mesmo que train)
-val: data
-
-# Caminho para teste (opcional)
-test: data
-
-# Mapeamento de classes (ID -> Nome)
 names:
   0: nao_permitido
   1: permitido
-
-# Número de classes
-nc: 2
-
+path: C:\Users\Pichau\Documents\tcc_project\yolov8_model\data
+test: C:\Users\Pichau\Documents\tcc_project\yolov8_model\data\train
+train: C:\Users\Pichau\Documents\tcc_project\yolov8_model\data\train
+val: C:\Users\Pichau\Documents\tcc_project\yolov8_model\data\train
