feat: adicionado script para o goolge rodar em devtools e aparecer em quando o aluno entrar em algum slide via brightspace, foi adicionado uma lista de urls proibidas de serem acessadas

--- a/yolov8_model/config.yaml
+++ b/yolov8_model/config.yaml
@@ -1,7 +1,4 @@
-names:
-  0: nao_permitido
-  1: permitido
 path: C:\Users\Pichau\Documents\tcc_project\yolov8_model\data
-test: C:\Users\Pichau\Documents\tcc_project\yolov8_model\data\train
-train: C:\Users\Pichau\Documents\tcc_project\yolov8_model\data\train
-val: C:\Users\Pichau\Documents\tcc_project\yolov8_model\data\train
+test: train
+train: train
+val: val
